# ball-sort

./: .gitignore  Anchor.toml  README.md  netlify.toml  package.json
backend/: .gitignore  README.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.json
backend/src/: app.ts  index.ts
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/components/: ActiveTournaments.tsx  HowItWorks.tsx  PuzzleDemo.tsx  RecentGames.tsx  Sidebar.tsx  StatsGrid.tsx
programs/ball-sort/: Cargo.toml
programs/ball-sort/src/: lib.rs
programs/ball-sort/src/instructions/: mod.rs
programs/ball-sort/src/instructions/puzzle/: abandon_puzzle.rs  apply_move.rs  apply_undo.rs  consume_randomness.rs  create_puzzle_permissions.rs  delegate_puzzle.rs  delegate_puzzle_permissions.rs  finalize_puzzle.rs  init_puzzle.rs  mod.rs  start_puzzle.rs
programs/ball-sort/src/instructions/session/: close_session.rs  mod.rs  open_session.rs
programs/ball-sort/src/instructions/setup/: create_player_auth.rs  initialize_game_config.rs  mod.rs  update_game_config.rs
programs/ball-sort/src/instructions/tournament/: create_tournament.rs  join_tournament.rs  mod.rs  record_and_close_claim.rs
programs/ball-sort/src/state/: game_config.rs  mod.rs  player_auth.rs  player_profile.rs  puzzle_board.rs  puzzle_stats.rs  tournament.rs  tournament_entry.rs
programs/ball-sort/src/types/: constants.rs  enums.rs  errors.rs  events.rs  mod.rs
programs/ball-sort/src/utils/: mod.rs  puzzle_math.rs  score_calculator.rs  session_validator.rs  vrf_helpers.rs
tests/: er ball-sort.test.ts  utils.ts
(+105 files in other folders)
