[package]
name = "ball-sort"
version = "0.2.4"
description = "Ball Sort — Anchor Auth + VRF + Tournament Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ball_sort"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang        = { version = "^0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "^0", features = ["access-control", "anchor"] }
ephemeral-vrf-sdk     = { version = "^0", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }